@@ -1,3 +1,10 @@
+2003-08-18  Michal Ludvig  <mludvig@suse.cz>
+
+	* config/i386/nm-x86-64linux.h (LINUX_CHILD_POST_STARTUP_INFERIOR):
+	Define.
+	* i386-linux-nat.c: Include "linux-nat.h".
+	(child_post_startup_inferior): New function.
+	
 2003-08-17  Daniel Jacobowitz  <drow@mvista.com>
 
 	* lin-lwp.c (child_wait): Call linux_record_stopped_pid.
